--- a/Parcial3/ServerExpress/package.json
+++ b/Parcial3/ServerExpress/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.18.2",
     "mysql2": "^3.6.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "morgan": "1.10.0",
     "nodemon": "3.0.1"
   }
